<resources>
    <string name="app_name">MenuProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="btnSMS">SMS</string>
    <string name="btnPhone">Phone</string>
    <string name="btnWeb">Web</string>
    <string name="btnMap">Map</string>
    <string name="btnShare">Share</string>
    <string name="btnNewActivity">New Activity</string>
    <string name="action_help">Help</string>
</resources>
